# simd_matmul

./: .gitignore  CMakeLists.txt  dump.sh  plot.py  ressrouces.txt
scripts/: dumpall.py  generate.py  test.py
src/: BLASMul.h  Boost.h  DevideAndConquer.h  Matrix.cpp  Matrix.h  Naive.h  RegisterBlocking.h  generate_random.cpp  main.cpp
src/register_blocking/: BlockWise.h  RegisterBlocking.h
src/register_blocking/detail/: BlockWiseConfigs.h  BlockWiseImpl.h  ExtendedBlockWiseConfig.h  RegisterBlocking.h  RegisterBlockingManual.h  manual.h
